# otchet

./: .gitignore
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile  init_admin.sql  test_notifications.sql
backend/migrations/: 001_initial.sql  002_unique_constraints.sql  003_add_user_names.sql  004_performance_optimizations_simple.sql
backend/src/: main.rs
backend/src/handlers/: admin.rs  applications.rs  auth.rs  files.rs  metrics.rs  mod.rs  notifications.rs
backend/src/middleware/: auth.rs
backend/src/models/: application.rs  interview.rs  mod.rs  screening.rs  user.rs
backend/src/services/: activity.rs  activity_original.rs  analytics.rs  analytics_original.rs  cache.rs  metrics.rs  mod.rs  notification.rs
backend/src/utils/: database.rs  errors.rs  jwt.rs  logger.rs  mod.rs
docker/: docker-compose.yml
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  dark-mode-safelist.css  main.tsx
frontend/src/components/: ActivityHeatmap.tsx  Layout.tsx
frontend/src/contexts/: ThemeContext.tsx
frontend/src/pages/: AdminPage.tsx  ApplicationsPage.tsx  DashboardPage.tsx  LoginPage.tsx  RegisterPage.tsx  StudentsPage.tsx
frontend/src/schemas/: validation.ts
frontend/src/services/: httpClient.ts
frontend/src/store/: authStore.ts
frontend/src/types/: index.ts
frontend/src/utils/: api.ts  colors.ts
