[package]
name = "job-tracker-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "=0.7.4", features = ["multipart"] }
tokio = { version = "=1.35.1", features = ["full"] }
tower = "=0.4.13"
tower-http = { version = "=0.5.1", features = ["cors", "fs"] }
serde = { version = "=1.0.195", features = ["derive"] }
serde_json = "=1.0.111"
sqlx = { version = "=0.7.3", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate"] }
chrono = { version = "=0.4.31", features = ["serde"] }
uuid = { version = "=1.6.1", features = ["v4", "serde"] }
bcrypt = "=0.14.0"
argon2 = "=0.5.2"
password-hash = { version = "=0.5.0", features = ["alloc", "rand_core"] }
infer = "=0.15.0"
jsonwebtoken = "=8.3.0"
anyhow = "=1.0.79"
thiserror = "=1.0.56"
tracing = "=0.1.40"
tracing-subscriber = { version = "=0.3.18", features = ["env-filter"] }
dotenv = "=0.15.0"
mime = "=0.3.17"
regex = "=1.10.2"
validator = { version = "=0.16.1", features = ["derive"] }
base64ct = "=1.6.0"
tokio-cron-scheduler = "=0.10.2"
md5 = "=0.7.0"